--- a/css/styles.css
+++ b/css/styles.css
@@ -48,12 +48,11 @@ body{
 /*================ START DMYTRO K ===============*/
 .customer-reviews {
     background-color: #ffffff;
-    background-image:  url(../image/Customers-backround.jpg);
-    background-position: center;
+    background-image: url(../image/Customers-backround.jpg);
+    background-position: top 0 left 220px;
     background-repeat: no-repeat;
-    background-size: cover;
     padding-top: 100px;
-    padding-bottom: 64px;
+    padding-bottom: 200px;
     
 }
 .container {
@@ -61,7 +60,7 @@ body{
 .customer-reviews-title {
 font-weight: 700;
 font-size: 42px;
-line-height: 1.67;
+line-height: 1.16;
 color: #2C2C2C;
 margin-bottom: 20px;
 }
@@ -81,15 +80,16 @@ width: 656px;
 .customer-reviews-list {
     display: flex;
     gap: 140px;
-    margin-bottom: 200px;
+   
 }
 .customer-reviews-item {
-}
+   
+} 
 .customer-reviews-box {
     width: 501px;
-    padding: 14px;
+    padding: 16px 14px 12px 14px;
     background-color: #ffffff;
-    border-radius: 0px 16px 16px 16px;
+    border-radius: 0px 15px 15px 15px;
 
 }
 
@@ -102,9 +102,9 @@ width: 656px;
 .customer-box-txt {
 font-weight: 700;
 font-size: 18px;
-line-height: 1.67;
+line-height: 1.16;
 color: #2C2C2C;
-margin-bottom: 40px;
+margin-bottom: 38px;
 
 }
 .customer-card-box{
@@ -113,7 +113,7 @@ margin-bottom: 40px;
     padding-top: 2px;
     padding-bottom: 2px;
     width: 160px;
-  position: relative;
+    position: relative;
    
 }
 .customer-card-box::before{
@@ -144,13 +144,84 @@ margin-bottom: 2px;
 }
 .customer-reviews-form {
 }
-.customer-reviews-btn {
+.subscribe{
+ 
+    padding-bottom: 100px;
+   
 }
-.customer-mail{
-    width: 394px;
+.subscribe-title{
+font-weight: 700;
+font-size: 42px;
+line-height: 1.20;
+color: #2C2C2C;
+margin-bottom: 20px;
+
+}
+.subscribe-form-txt{
+font-size: 16px;
+line-height: 1.50;
+color: #2C2C2C;
+margin-bottom: 24px;
+width: 656px;
+
+
+}
+.subscribe-form-btn {
+    font-weight: 500;
+    font-size: 13px;
+    line-height: 1.50;
+    position: 11px 22px;
+    color: #2C2C2C;
+    width: 103px;
     height: 42px;
+    border-radius: 30px;
+    border: none;
+    background-color:  #BBF330;
+    margin-left: 31px;
+    transition-property: background-color, box-shadow;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
+}
+.subscribe-form-btn:hover,
+.subscribe-form-btn:focus{
+    background-color:  #FFE450;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.subscribe-mail{
+    width: 394px;
+    height:  42px;
     border-radius: 15px;
     border: 0.85px solid  rgba(255, 229, 80, 1);
+    font-size: 12px;
+    line-height: 1.50;
+    color: #505050;
+    padding: 12px 57px 12px 12px;
+    transition-property: border;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
+}
+.subscribe-mail::placeholder{
+font-size: 12px;
+line-height: 1.50;
+color: #505050;
+
+}
+.subscribe-mail:focus{
+    outline: none;
+    border: 0.85px solid  #BBF330;
+}
+.subscribe-form-box{
+    display: flex;
+    gap: 32px;
+    position: relative;
+}
+.subscribe-photo{
+position: absolute;
+width: 608px;
+height: 266px;
+left: 656px;
+top: -202px;
+
 }
 /*================ FINISH DMYTRO K ===============*/
 
